--- a/home-project/production-workflow/App.Domain/App.Domain.csproj
+++ b/home-project/production-workflow/App.Domain/App.Domain.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\Base.Resources\Base.Resources.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+    </ItemGroup>
+
 </Project>
