--- a/home-project/production-workflow/Base.Domain/Base.Domain.csproj
+++ b/home-project/production-workflow/Base.Domain/Base.Domain.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+      <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Base.Contracts\Base.Contracts.csproj" />
+    </ItemGroup>
+
 </Project>
