jwt and account controller

--- a/home-project/production-workflow/WebApp/WebApp.csproj
+++ b/home-project/production-workflow/WebApp/WebApp.csproj
@@ -28,6 +28,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\App.DAL.EF\App.DAL.EF.csproj" />
+      <ProjectReference Include="..\App.DTO\App.DTO.csproj" />
       <ProjectReference Include="..\Base.Helpers\Base.Helpers.csproj" />
     </ItemGroup>
 
