--- a/home-project/production-workflow/Base.Helpers/Base.Helpers.csproj
+++ b/home-project/production-workflow/Base.Helpers/Base.Helpers.csproj
@@ -10,4 +10,10 @@
       <ProjectReference Include="..\App.DAL.EF\App.DAL.EF.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.3" />
+      <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.8.0" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
+    </ItemGroup>
+
 </Project>
