filled dto objects

--- a/home-project/production-workflow/App.DAL.DTO/App.DAL.DTO.csproj
+++ b/home-project/production-workflow/App.DAL.DTO/App.DAL.DTO.csproj
@@ -7,7 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\App.Domain\App.Domain.csproj" />
       <ProjectReference Include="..\Base.Contracts\Base.Contracts.csproj" />
+      <ProjectReference Include="..\Base.Domain\Base.Domain.csproj" />
+      <ProjectReference Include="..\Base.Resources\Base.Resources.csproj" />
     </ItemGroup>
 
 </Project>
